applications/lobehub/lobehub-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: lobehub

spec:
  selector:
    app: lobehub

  ports:
    - port: 80
      targetPort: 3210
